# aegis

./: .gitguardianignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  INTEGRATION.md  LICENSE  README.md  aegis.py  aegis_bridge.py  aegis_cli.py  benchmark.py  cactus-compute-research.md  eval.py  eval_embeddinggemma.py  eval_fresh.py  eval_regression.py  functiongemma-research.md  main.py  pyproject.toml  test_bridge_smoke.py  test_e2e.sh
.claude/: settings.local.json
aegis/: __init__.py  bridge.py  embedding.py  requirements.txt
aegis-head/: lr.joblib
assets/: DEMO_SCRIPT.md
backend/: api.py  requirements.txt
docs/: PRIVACY.md  limits-and-improvements.md  roadmap.md
frontend/: package-lock.json  package.json
functiongemma-finetuning/: README.md  generate_dataset.py  requirements.txt  train.py
middleware/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  OPENROUTER_SETUP.md  QUICKSTART.md  README.md  create_test_pdf.cjs  openclaw.plugin.json  package-lock.json  package.json  test_qwen_tool_call_pdf.cjs  test_tool_call_final.cjs  tsconfig.json
model-merge/: cactus_test_log.json  cactus_training_data_log.json  dump_prompt.py  merge_and_test.py  test_cactus_model.py  test_cactus_raw.py
samples/: apache_license.txt  apartment_rental_application.txt  api_config.env  aws_credentials_dev.ini  blog_post_draft.txt  board_meeting_minutes.txt  changelog_release_notes.md  ci_build_log.txt  conference_attendees.json  conference_talk_abstract.txt  crisis_communications_playbook.md  customer_support_tickets_pii.csv  discord_webhook_config.env  dmv_registration_records.csv  docker_compose_prod.yml  donor_pledge_tracker.csv  draft_press_release.txt  employee_directory.json  executive_offsite_agenda.md  gcp_service_account_key.json  git_commit_message.txt  github_actions_secrets_export.env  github_issue_bug_report.txt  hospital_discharge_summary.txt  hr_exit_interview_records.txt  insurance_claim_form.txt  internal_audit_findings.md  internal_pricing_strategy.md  internal_product_roadmap.md  investor_relations_talking_points.md  kubernetes_secrets.yaml  litigation_hold_notice.txt  (+31 more)
(+128 files in other folders)
