[project]
name = "aegis-mcp-dev"
version = "1.0.0"
description = "Aegis MCP — on-device privacy classifier for AI agents (dev workspace)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Christian Morales Panitz" },
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "accelerate>=1.12.0",
    "google-genai>=1.64.0",
    "joblib>=1.5.3",
    "peft>=0.18.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]

[project.urls]
Repository = "https://github.com/AmaruEscalante/aegis"
Issues = "https://github.com/AmaruEscalante/aegis/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: tests that load the real embeddinggemma model (gated, run manually)",
]
testpaths = ["tests"]
